# summurai

./: .gitignore  LICENSE  README.md  pyproject.toml  summarai.py
examples/: secrets.txt
examples/foobar/: seashanties.txt
